--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,10 +12,13 @@
   },
   "dependencies": {
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "recharts": "^3.3.0"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.14",
+    "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react-hooks": "^7.0.1",
     "postcss": "^8.4.24",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2"
