--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,9 +17,13 @@
     "recharts": "^3.3.0"
   },
   "devDependencies": {
+    "@eslint/js": "^9.39.0",
     "autoprefixer": "^10.4.14",
+    "eslint": "^8.57.1",
     "eslint-plugin-import": "^2.32.0",
+    "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^7.0.1",
+    "globals": "^16.5.0",
     "postcss": "^8.4.24",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.3.2"
