Major Frontend Update: ProcessingPage, DeepfakeCard

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ python-3.12.10-embed-amd64/
 get-pip.py
 backend/models/detection/loaded_dataset.npz
 backend/models/detection/loaded_datasetof2.npz
+frontend/build/
